@@ -20,6 +20,8 @@
 - added a new argument `size {Number}` to the `WebSocket.on('message', function(client, msg, [size]))` event
 - fixed `@{href()}` command in the ViewEngine
 - improved config & resource parser by adding support for `=` between key and value and for `#` as a comment
+- removed `@{url()}` method and added `@{url}` property
+- added `@{hostname([url])}`
 
 ========================
 0.0.5
